# briefsmith-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
evals/20260224_065944_302730/: eval_report.json  eval_report.md
evals/20260224_070156_fa3aaa/: eval_report.json  eval_report.md
evals/20260224_070812_a536fd/: eval_report.json  eval_report.md
evals/20260224_071756_7a9301/: eval_report.json  eval_report.md
outputs/: brief.json  final_brief.md  findings.json  findings.md  run_metadata.json
runs/20260224_063346_d951e0/: brief.json  final_brief.md  findings.json  findings.md  input.json  run_metadata.json  sources.json
src/briefsmith/: __init__.py  api.py  cli.py
src/briefsmith/agents/: __init__.py  critic.py  planner.py  researcher.py  synthesizer.py  writer.py
src/briefsmith/eval/: __init__.py  metrics.py  report.py  runner.py
src/briefsmith/llm/: __init__.py  client.py  errors.py  ollama_client.py  structured.py
src/briefsmith/runs/: __init__.py  models.py  store.py
src/briefsmith/schemas/: __init__.py  brief.py  input.py  output.py  research.py  sources.py  state.py  utils.py
src/briefsmith/tools/: __init__.py  cache.py  duckduckgo.py  search_client.py  utils.py
src/briefsmith/workflows/: __init__.py  graph.py
tests/: __init__.py  test_api_runs.py  test_cache.py  test_critic_approval.py  test_duckduckgo_client.py  test_eval_harness.py  test_graph_smoke.py  test_llm_structured.py  test_placeholder.py  test_revision_loop.py  test_writer_prompt.py
